# flasher-ci

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  build.py  index-template.json  index.json  main.py  pyproject.toml
.github/workflows/: ci.yml
kconfigs/: example.kconfig
scripts/: validate-all.sh
